[workspace]
members = [
    "crates/*",
    "crates/mio",
    "crates/spec",
    "crates/sqlite3",
    "futures/*",
    "web3/*"
]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/HalaOS/rasi.git"
version = "0.2.2"

[workspace.dependencies]
log = { version = "^0.4" }
pretty_env_logger = "^0.5"
clap = "^4.5"
thiserror = "^1.0"
futures-test = "^0.3"
futures = "^0.3"
bitmask-enum = "^2.2"
rand = { version = "^0.8", features = ["getrandom"] }
mio = { version = "^1", features = ["os-poll", "net", "os-ext"] }
dashmap = "^6.0"
boxcar = "^0.2.4"
windows-sys = "^0.59"
boring = "^4.4.0"
http = "^1.0"
httparse = "^1.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
bytes = "^1.5"
num_cpus = "^1.16"
bigdecimal = "^0.4"
sqlite3-sys = "^0.17"
quiche = { version = "^0.22", features = ["boringssl-boring-crate"] }
ring = "^0.17"
cooked-waker = "^5.0"
ethnum = "1.5.0"
sha3 = "^0.10"
regex = "^1.10"
# rasi
rasi = { path = "crates/rasi", version = "^0.2" }
rasi-spec = { path = "crates/spec", version = "^0.2" }
rasi-mio = { path = "crates/mio", version = "^0.2" }
futures-boring = { path = "futures/boring", version = "^0.2" }
futures-map = { path = "futures/map", version = "^0.2" }
futures-http = { path = "futures/http", version = "^0.2" }
futures-jsonrpcv2 = { path = "futures/jsonrpc", version = "^0.2" }
