[workspace]
members = [
    "crates/*",
    "crates/mio",
    "crates/spec",
    "crates/sqlite3",
    "futures/*",
    "reweb3/*",
    "examples/*",
    "rep2p/*"
]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/HalaOS/rasi.git"
version = "0.2.2"

[workspace.dependencies]
log = { version = "^0.4" }
pretty_env_logger = "^0.5"
clap = "^4.5"
thiserror = "^1.0"
futures-test = "^0.3"
futures = "^0.3"
bitmask-enum = "^2.2"
rand = { version = "^0.8", features = ["getrandom"] }
mio = { version = "^1", features = ["os-poll", "net", "os-ext"] }
dashmap = "^6.0"
boxcar = "^0.2.4"
windows-sys = "^0.59"
boring = "^4.4.0"
http = "^1.0"
httparse = "^1.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
bytes = "^1.5"
num_cpus = "^1.16"
bigdecimal = "^0.4"
sqlite3-sys = "^0.17"
quiche = { version = "^0.22", features = ["boringssl-boring-crate"] }
ring = "^0.17"
cooked-waker = "^5.0"
ethnum = "1.5.0"
sha3 = "^0.10"
regex = "^1.10"
quote = "^1"
proc-macro2 = "^1"
heck = "^0.5"
anyhow = "^1"
syn = "^2"
quickcheck = "1.0"
paste = "1.0"
num-integer = { version = "0.1" }
num-traits = { version = "0.2" }
serde-big-array = { version = "0.5" }
async-trait = "^0.1"
concat-idents = "^1"
hmac = { version = "^0.12" }
scrypt = { version = "^0.11", default-features = false }
aes = { version = "0.8.2" }
ctr = { version = "0.9.2" }
digest = { version = "0.10.6" }
pbkdf2 = { version = "^0.12" }
k256 = { version = "^0.13" }
elliptic-curve = "^0.13"
sha2 = { version = "0.10.6" }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
ecdsa = { version = "^0.16" }
termcolor = "^1.4"
const-oid = "0.9.6"
der = { version = "=0.7.9" }
der_derive = { version = "=0.7.3" }
p256 = "^0.13"
p384 = "^0.13"
p521 = "^0.13"
zeroize = "1.7.0"
pkcs1 = "0.7.5"
sec1 = "0.7.3"
rsa = "^0.9"
x509-cert = "0.2.5"
# rasi
rasi = { path = "crates/rasi", version = "^0.2" }
rasi-spec = { path = "crates/spec", version = "^0.2" }
rasi-mio = { path = "crates/mio", version = "^0.2" }
futures-boring = { path = "futures/boring", version = "^0.2" }
futures-map = { path = "futures/map", version = "^0.2" }
futures-http = { path = "futures/http", version = "^0.2" }
futures-jsonrpcv2 = { path = "futures/jsonrpc", version = "^0.2" }
futures-quic = { path = "futures/quic", version = "^0.2" }
reweb3 = { path = "reweb3/reweb3", version = "^0.2" }
reweb3-num = { path = "reweb3/num", version = "^0.2" }
reweb3-macros = { path = "reweb3/macros", version = "^0.2" }
ethbind = { path = "reweb3/bind", version = "^0.2" }
ringbuf-rs = { path = "crates/ringbuf", version = "^0.2" }
rep2p = { path = "rep2p/rep2p", version = "^0.2" }
rep2p-mux = { path = "rep2p/mux", version = "^0.2" }
rep2p-x509 = { path = "rep2p/x509", version = "^0.2" }
#libp2p
multiaddr = "^0.18"
identity = { version = "^0.2", package = "libp2p-identity" }
semver = "^1.0"
multistream-select = "^0.13"
unsigned-varint = "^0.8.0"
# protobuf
protobuf-codegen = "^3"
protoc-bin-vendored = "^3"
protobuf = "^3"
