[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.2.4"

[workspace.dependencies]
log = { version = "^0.4" }
pretty_env_logger = "^0.5"
clap = "^4.5"
thiserror = "^1.0"
futures-test = "^0.3"
futures = "^0.3"
bitmask-enum = "^2.2"
rand = { version = "^0.8", features = ["getrandom"] }
mio = { version = "^1", features = ["os-poll", "net", "os-ext"] }
dashmap = "^6.0"
boxcar = "^0.2.4"
windows-sys = "^0.59"
bytes = "^1.5"
num_cpus = "^1.16"
bigdecimal = "^0.4"
sqlite3-sys = "^0.17"
libc = "^0.2"
# rasi
rasi = { path = "crates/rasi", version = "^0.2" }
rasi-spec = { path = "crates/spec", version = "^0.2" }
rasi-mio = { path = "crates/mio", version = "^0.2" }
ringbuf-rs = { path = "crates/ringbuf", version = "^0.2" }
