[package]
description = "a reference implementation of RASI syscalls"
documentation = "https://docs.rs/rasi-mio"
edition.workspace = true
license = "MIT"
name = "rasi-default"
repository.workspace = true
version.workspace = true


[dependencies]
mio = { workspace = true }
parking_lot = { workspace = true }
num_cpus = { workspace = true }
boxcar = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true, features = ["std", "executor", "thread-pool"] }

rasi-syscall = { workspace = true, features = ["net", "time"] }

[dev-dependencies]
futures-test = { workspace = true }
rasi-spec = { workspace = true }
