[package]
description = "a reference implementation of RASI syscalls"
documentation = "https://docs.rs/rasi-mio"
edition.workspace = true
license = "MIT"
name = "rasi-default"
repository.workspace = true
version.workspace = true


[dependencies]
mio = { workspace = true }
parking_lot = { workspace = true }
num_cpus = { workspace = true }
boxcar = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true, optional = true }

rasi-syscall = { workspace = true, optional = true }

[dev-dependencies]
futures-test = { workspace = true }
rasi-spec = { workspace = true }


[features]

default = ["std", "fs", "net", "time", "executor"]

fs = ["rasi-syscall/fs"]
net = ["rasi-syscall/net"]
time = ["rasi-syscall/time"]
executor = ["rasi-syscall/executor", "futures/executor", "futures/thread-pool"]

alloc = ["futures/alloc", "futures/executor"]

std = ["futures/std", "futures/executor"]
