[package]
description = "a reference implementation of RASI syscalls"
documentation = "https://docs.rs/rasi-mio"
edition.workspace = true
license = "MIT"
name = "rasi-default"
repository.workspace = true
version.workspace = true
readme = "README.md"

[dependencies]
mio = { workspace = true }
parking_lot = { workspace = true }
num_cpus = { workspace = true }
boxcar = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true, optional = true }

rasi-syscall = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true
optional = true

[dev-dependencies]
futures-test = { workspace = true }
rasi-spec = { workspace = true }


[features]

default = ["std", "fs", "net", "time", "executor", "unix_socket","windows_named_pipe"]

fs = ["rasi-syscall/fs"]
net = ["rasi-syscall/net"]
time = ["rasi-syscall/time"]
executor = ["rasi-syscall/executor", "futures/executor", "futures/thread-pool"]
unix_socket = ["rasi-syscall/unix_socket"]

windows_named_pipe = [
    "rasi-syscall/windows_named_pipe",  
    "windows-sys/Win32_Foundation",
    "windows-sys/Win32_Security",
    "windows-sys/Win32_Storage_FileSystem",
    "windows-sys/Win32_System_Pipes",
    "windows-sys/Win32_System_SystemServices"
]

alloc = ["futures/alloc", "futures/executor"]

std = ["futures/std", "futures/executor"]
