[package]
description = """
This library includes extend features or experimental features that are useful for asynchronous programming.
"""
documentation = "https://docs.rs/rasi-ext"
edition.workspace = true
license = "MIT"
name = "rasi-ext"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasi = { workspace = true }
dashmap = { workspace = true, optional = true }
cooked-waker = { workspace = true }
parking_lot = { workspace = true, optional = true }
quiche = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
log = { workspace = true }
ring = { workspace = true, optional = true }
futures = { workspace = true }

[dev-dependencies]
futures-test = { workspace = true }
divan = { workspace = true }
futures = { workspace = true, features = ["executor", "thread-pool"] }
rasi-default = { workspace = true }
pretty_env_logger = { workspace = true }

[features]
default = ["event_map", "batching", "quic"]

event_map = ["dashmap"]
batching = ["parking_lot"]
quic = ["udp_group", "quiche", "ring"]
udp_group = ["bytes", "rand", "batching"]

[[bench]]
harness = false
name = "map_bench"


[[bench]]
harness = false
name = "queue_bench"
