[package]
description = "The Rust Asynchronous IO System Interface"
documentation = "https://docs.rs/rasi"
edition.workspace = true
license = "MIT"
name = "rasi"
repository.workspace = true
version.workspace = true

[dependencies]
log = { workspace = true }
futures = { workspace = true }
bitmask-enum = { workspace = true }
num_cpus = { workspace = true }
bigdecimal = { workspace = true }

[features]
default = ["futures-spawn"]
futures-spawn = ["futures/thread-pool", "futures/executor"]
