[package]
description = "The Rust Asynchronous IO System Interface"
documentation = "https://docs.rs/rasi"
edition.workspace = true
license = "MIT"
name = "rasi"
repository = "https://github.com/HalaOS/RASI.git"
version.workspace = true

[dependencies]
log = { workspace = true }
futures = { workspace = true }
bitmask-enum = { workspace = true }
num_cpus = { workspace = true }
bigdecimal = { workspace = true }

[features]
default = ["fs", "ipc", "net", "rdbc", "task", "timer"]
fs = []
ipc = []
net = []
rdbc = []
task = []
timer = []
task-futures = ["futures/thread-pool", "futures/executor", "task"]
