[package]
description = "The Official RASI Specification Test Suite"
documentation = "https://docs.rs/rasi-spec"
edition.workspace = true
license = "MIT"
name = "rasi-spec"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rasi = { workspace = true }
futures-test = { workspace = true }
futures = { workspace = true, features = ["std", "executor", "thread-pool"] }
rand = { workspace = true, optional = true }
