[package]
description = "rais database driver for sqlite3"
documentation = "https://docs.rs/rasi-sqlite3"
edition.workspace = true
license = "MIT"
name = "rasi-sqlite3"
repository.workspace = true
version.workspace = true
readme = "README.md"

[dependencies]
rasi = { workspace = true }
log = { workspace = true }
sqlite3-sys = { workspace = true }

[dev-dependencies]
rasi-spec = { workspace = true }
futures-test = { workspace = true }

[features]
