[package]
description = "The low level syscall interface for RASI system."
documentation = "https://docs.rs/rasi-syscall"
edition.workspace = true
license = "MIT"
name = "rasi-syscall"
repository.workspace = true
version.workspace = true

[dependencies]
futures = { workspace = true }
bitmask-enum = { workspace = true }

[features]
net = []
fs = []
timer = []
executor = []
alloc = ["futures/alloc", "futures/executor"]
std = ["futures/std", "futures/executor"]
