[package]
description = "An implementation of quic protocol backed by Quiche"
documentation = "https://docs.rs/futures-quic"
edition.workspace = true
license = "MIT"
name = "futures-quic"
repository.workspace = true
version.workspace = true
readme = "README.md"

[dependencies]
futures-waitmap = { workspace = true }
quiche = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
rasi = { workspace = true, optional = true }
futures-boring = { workspace = true }
ring = { workspace = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
futures-test = { workspace = true }
rasi-mio = { workspace = true }
rasi = { workspace = true, features = ["task-futures"] }
pretty_env_logger = { workspace = true }

[features]
default = ["with-rasi"]
with-rasi = ["rasi", "rand"]
