[package]
description = "The libp2p dnsaddr transport implementation for rep2p."
documentation = "https://docs.rs/rep2p-dnsaddr"
edition.workspace = true
license = "MIT"
name = "rep2p-dnsaddr"
repository.workspace = true
version.workspace = true

[dependencies]
rep2p = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
rep2p-tcp = { workspace = true }
rep2p-quic = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
futures-test = { workspace = true }
rasi-mio = { workspace = true }
pretty_env_logger = { workspace = true }
