[package]
description = "The official kad protocol implementation for rep2p."
documentation = "https://docs.rs/rep2p-kad"
edition.workspace = true
license = "MIT"
name = "rep2p-kad"
repository.workspace = true
version.workspace = true

[dependencies]
sha2 = { workspace = true }
uint = { workspace = true }
identity = { workspace = true, features = ["peerid", "rand"] }
generic-array = { workspace = true }
rep2p = { workspace = true }
protobuf = { workspace = true }
log = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }

[build-dependencies]
protobuf-codegen = { workspace = true }
protoc-bin-vendored = { workspace = true }
