[package]
description = "The official kad protocol implementation for rep2p."
documentation = "https://docs.rs/rep2p-kad"
edition.workspace = true
license = "MIT"
name = "rep2p-kad"
repository.workspace = true
version.workspace = true

[dependencies]
sha2 = { workspace = true }
uint = { workspace = true }
identity = { workspace = true, features = ["peerid", "rand"] }
generic-array = { workspace = true }
rep2p = { workspace = true }
protobuf = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
unsigned-varint = { workspace = true }
async-trait = { workspace = true }
rasi = { workspace = true, features = ["task-futures"] }

[dev-dependencies]
quickcheck = { workspace = true }
futures-test = { workspace = true }
rasi-mio = { workspace = true }
pretty_env_logger = { workspace = true }
rep2p-tcp = { workspace = true }
rep2p-quic = { workspace = true }

[build-dependencies]
protobuf-codegen = { workspace = true }
protoc-bin-vendored = { workspace = true }
