[package]
description = "libp2p framework rewritten from the ground up in rust"
documentation = "https://docs.rs/rep2p"
edition.workspace = true
license = "MIT"
name = "rep2p"
repository.workspace = true
version.workspace = true

[dependencies]
multiaddr = { workspace = true }
identity = { workspace = true, features = ["ed25519", "rand"] }
semver = { workspace = true }
multistream-select = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
rasi = { workspace = true, features = ["task-futures"] }
log = { workspace = true }
protobuf = { workspace = true }
unsigned-varint = { workspace = true, features = ["futures"] }
rand = { workspace = true }
futures-map = { workspace = true }

[build-dependencies]
protobuf-codegen = { workspace = true }
protoc-bin-vendored = { workspace = true }

[features]
default = ["pprof"]
pprof = []
