[package]
description = "The standard test suites for rep2p"
documentation = "https://docs.rs/rep2p-spec"
edition.workspace = true
license = "MIT"
name = "rep2p-spec"
repository.workspace = true
version.workspace = true

[dependencies]
rasi = { workspace = true, features = ["task-futures"] }
rasi-mio = { workspace = true }
rep2p = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
