[package]
description = "The tcp transport implementation for rep2p"
documentation = "https://docs.rs/rep2p-tcp"
edition.workspace = true
license = "MIT"
name = "rep2p-tcp"
repository.workspace = true
version.workspace = true

[dependencies]
rep2p-mux = { workspace = true }
rep2p-x509 = { workspace = true }
rep2p = { workspace = true }
log = { workspace = true }
multistream-select = { workspace = true }
async-trait = { workspace = true }
futures-boring = { workspace = true }
futures = { workspace = true }
rasi = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rasi = { workspace = true, features = ["task-futures"] }
rasi-mio = { workspace = true }
futures-test = { workspace = true }
pretty_env_logger = { workspace = true }
rep2p-spec = { workspace = true }
