[package]
description = "utilities for generating/parsing/verify x509 certifacate with libp2p extension"
documentation = "https://docs.rs/rep2p-x509"
edition.workspace = true
license = "MIT"
name = "rep2p-x509"
repository.workspace = true
version.workspace = true

[dependencies]
x509-cert = { workspace = true, features = ["builder", "hazmat"] }
p256 = { workspace = true, features = ["arithmetic", "pkcs8", "pem"] }
const-oid = { workspace = true }
der = { workspace = true }
der_derive = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true, features = ["oid"] }
p384 = { workspace = true }
p521 = { workspace = true }
zeroize = { workspace = true }
pkcs1 = { workspace = true }
sec1 = { workspace = true }
identity = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
protobuf = { workspace = true }
rep2p = { workspace = true }
