[package]
description = "Client-side framework(Web3) for ethereum and other EVM-based chains rewritten in rust "
documentation = "https://docs.rs/reweb3-macros"
edition.workspace = true
license = "MIT"
name = "reweb3-macros"
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
ethbind = { workspace = true, features = ["rustgen"] }
serde_json = { workspace = true }
