[package]
description = "Arbitrary precision, fixed-size signed and unsigned integer types for ethereum."
documentation = "https://docs.rs/reweb3-num"
edition.workspace = true
license = "MIT"
name = "reweb3-num"
repository.workspace = true
version.workspace = true
exclude = ["src/float/*", "src/tests", "TODO.txt", "lit-parser/*"]

[dependencies]
num-integer = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde-big-array = { workspace = true, optional = true }

[dev-dependencies]
quickcheck = { workspace = true }
paste = { workspace = true }

[features]
default = []
serde = ["dep:serde", "serde-big-array"]
numtraits = ["num-integer", "num-traits"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(has_leading_trailing_ones)',
    'cfg(has_reverse_bits)',
    'cfg(test_int_bits,values("64"))',
] }
