[package]
description = "Client-side framework(Web3) for ethereum and other EVM-based chains rewritten in rust "
documentation = "https://docs.rs/reweb3"
edition.workspace = true
license = "MIT"
name = "reweb3"
repository.workspace = true
version.workspace = true

[dependencies]
reweb3-num = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sha3 = { workspace = true }
futures-jsonrpcv2 = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
concat-idents = { workspace = true }

[dev-dependencies]
pretty_env_logger = { workspace = true }
rasi = { workspace = true, features = ["task-futures"] }
rasi-mio = { workspace = true }
futures-test = { workspace = true }

[features]
default = ["rlp", "clients", "eip712", "abi", "signer"]
contract = ["rlp", "clients", "abi", "signer"]
test-clients = []
rlp = []
clients = []
eip712 = []
abi = []
signer = []
