[package]
description = "Client-side framework(Web3) for ethereum and other EVM-based chains rewritten in rust "
documentation = "https://docs.rs/reweb3"
edition.workspace = true
license = "MIT"
name = "reweb3"
repository.workspace = true
version.workspace = true

[dependencies]
reweb3-num = { workspace = true, features = ["serde"] }
reweb3-macros = { workspace = true, optional = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sha3 = { workspace = true }
futures-jsonrpcv2 = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
concat-idents = { workspace = true }
ethbind = { workspace = true, optional = true }
heck = { workspace = true, optional = true }
syn = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
rasi = { workspace = true, features = ["task-futures"], optional = true }
hmac = { workspace = true, optional = true }
scrypt = { workspace = true, optional = true }
aes = { workspace = true, optional = true }
ctr = { workspace = true, optional = true }
digest = { workspace = true, optional = true }
pbkdf2 = { workspace = true, optional = true }
k256 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
elliptic-curve = { workspace = true, optional = true }

[dev-dependencies]
pretty_env_logger = { workspace = true }
rasi = { workspace = true, features = ["task-futures"] }
rasi-mio = { workspace = true }
futures-test = { workspace = true }

[features]
default = [
    "rlp",
    "clients",
    "eip712",
    "abi",
    "signer",
    "macros",
    "rasi",
    "wallet",
    "hardhat"
]
test-clients = []
rlp = []
clients = []
eip712 = []
abi = []
signer = []
bind = ["ethbind", "heck", "syn", "quote", "proc-macro2"]
macros = ["reweb3-macros"]
rasi = ["dashmap", "dep:rasi"]
wallet = [
    "hmac",
    "scrypt",
    "aes",
    "pbkdf2",
    "k256",
    "rand",
    "sha2",
    "uuid",
    "ctr",
    "digest",
    "elliptic-curve"
]
hardhat = []
