[package]
description = "web3(Ethereum and other EVM-based chains) contract bind tools."
documentation = "https://docs.rs/ethbind"
edition.workspace = true
license = "MIT"
name = "ethbind"
repository.workspace = true
version.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
sha3 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
heck = { workspace = true }
log = { workspace = true }

[dev-dependencies]
pretty_env_logger = { workspace = true }
