[package]
description = "web3(Ethereum and other EVM-based chains) contract bind tools."
documentation = "https://docs.rs/ethbind-macros"
edition.workspace = true
license = "MIT"
name = "ethbind-macros"
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
syn = { workspace = true }
quote = "^1"
proc-macro2 = "^1"
ethbind = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
