[package]
description = "web3(Ethereum and other EVM-based chains) client-side framework for rust language."
documentation = "https://docs.rs/web3rs"
edition.workspace = true
license = "MIT"
name = "web3rs"
repository.workspace = true
version.workspace = true

[dependencies]
ethbind = { workspace = true }
web3rs-core = { workspace = true }
