[package]
description = "An implementation of SSL streams for Futures built on top of the BoringSSL."
documentation = "https://docs.rs/futures-boring"
edition.workspace = true
license = "MIT"
name = "futures-boring"
repository.workspace = true
version.workspace = true
readme = "README.md"

[dependencies]
log = { workspace = true }
futures = { workspace = true }
boring = { workspace = true }

[dev-dependencies]
futures-test = { workspace = true }
rasi = { workspace = true }
rasi-mio = { workspace = true }
futures = { workspace = true, features = ["executor", "thread-pool"] }

[features]
